--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,3 @@
-body{background-color:#e12;display:block}
+@import url(./vendors/bootstrap.min.css)
 
-/*# sourceMappingURL=data:application/json;charset=utf8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInN0eWxlLnNjc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUEsS0FDSSxzQkFDQSxhQUFjLENBRWpCIiwiZmlsZSI6InN0eWxlLmNzcyIsInNvdXJjZXNDb250ZW50IjpbImJvZHl7XHJcbiAgICBiYWNrZ3JvdW5kLWNvbG9yOiAjZTEyO1xyXG4gICAgZGlzcGxheTogYmxvY2s7XHJcblxyXG59Il19 */
+/*# sourceMappingURL=data:application/json;charset=utf8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInN0eWxlLnNjc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQ0Esd0NBQU8iLCJmaWxlIjoic3R5bGUuY3NzIiwic291cmNlc0NvbnRlbnQiOlsiLy8gaW1wb3J0IHRoaXJkIHBhcnR5IGxpYnJhcmllc1xyXG5AaW1wb3J0ICcuL3ZlbmRvcnMvYm9vdHN0cmFwLm1pbi5jc3MnOyJdfQ== */
