--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,8 +1,17 @@
-doctype
-html
-    head
-        title Heello there!
-    body
-    h1 this is a heading
-    h4 this is anothter heading  
-    p this is a paragraph
+doctype html
+html(lang='en')
+  head
+    // Required meta tags
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    // Google fonts
+    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Poppins:300italic,400italic,500italic,600italic,700italic,800italic,700,300,600,800,400,500&subset=cyrillic-ext,greek-ext,latin,latin-ext,cyrillic,greek,vietnamese")
+    link(href="https://fonts.googleapis.com/css?family=Oswald:400,500" rel="stylesheet")
+    link(rel="stylesheet", href="assets/css/style.css")
+    // CSS Custom styles
+    link(rel='stylesheet', href='assets/css/style.css')
+    title Hello, world!
+  body
+    h1 Hello, world!
+    // Javascript bundeled file
+    script(src='assets/js/scripts.js')
