--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,2 @@
-body{
-    background-color: #e12;
-    display: block;
-
-}
+// import third party libraries
+@import './vendors/bootstrap.min.css';
